feat: added endpoint to get file from s3
